--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,12 @@ pyside6>=6.5.0
 numpy>=1.24.0
 sounddevice>=0.4.6
 scipy>=1.10.0
-requests>=2.31.0 
+requests>=2.31.0
+torch>=2.1.0
+torchaudio>=2.1.0
+librosa>=0.10.1
+soundfile>=0.12.1
+scikit-learn>=1.3.0
+matplotlib>=3.7.2
+seaborn>=0.12.2
+# webrtcvad>=2.0.10  # 컴파일 오류로 인해 제거 
